--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -30,3 +30,21 @@
 input::placeholder {
   margin-left: 0.5rem; /* Adjust the value as needed */
 }
+
+.loader {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #000;
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
